# Customer-Churn

./: .dockerignore  .flake8  .gitignore  Dockerfile  HF_DEPLOYMENT_GUIDE.md  README.md  TODO.md  buildspec.yml  requirements.txt  server_log.txt
.github/workflows/: ci-flake8.yml  hf_deploy.yml  mlops-drift.yml
aiops/: self_heal.py
classification/: explain.py
customer crunch/: Readme  __init__.py  monthly_churn_trends.csv  requirements.txt
customer crunch/aiops/: drift.py
customer crunch/classification/: audit.py  predict.py  train.py
customer crunch/customer_churn_saas/: README.md  app.py
customer crunch/forecasting/: model.py  trends.py
customer crunch/saved_models/: xgb_forecast_model.joblib
customer crunch/ui/: app.py  dashboard.py
customer_churn_saas/: TODO.md  app.py
customer_crunch/: requirements-hf.txt  requirements.txt
customer_crunch/agent/: __init__.py  advisor.py  mlops_agent.py
customer_crunch/aiops/: __init__.py  drift.py
customer_crunch/classification/: audit.py  business_metrics.py  dataset_config.py  predict.py  (+2 more)
customer_crunch/customer_churn_saas/: .dockerignore  Dockerfile  TODO.md  app.py  automation.py  model.py  pyproject.toml  requirements.txt
customer_crunch/customer_churn_saas/data/raw/: monthly_churn_trends.csv
customer_crunch/customer_churn_saas/saved_models/: churn_pipeline.joblib  retrained_chk_test.joblib  xgb_forecast_model.joblib
forecasting/: model.py  xgb_model.py
models/: churn_model.pkl
saved_models/: forecast_model.joblib
scripts/: deploy_hf.py  validate_hf_deploy.py
terraform/: rds.tf
(+20 files in other folders)
