[project]
name = "customer_churn_saas"
version = "0.1.0"
description = "Customer churn SaaS example (classification + forecasting)"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]

